# rs-aws-whoami

./: .goreleaser.yaml  Cargo.toml  build.rs  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
src/commands/: list_profiles.rs  mod.rs  whoami.rs
