[package]
name = "aws-whoami"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/bdwyertech/rs-aws-whoami"

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
aws-config = "1.1"
aws-sdk-sts = "1.12"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
