[package]
name = "aws-whoami"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/bdwyertech/rs-aws-whoami"

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
aws-config = { version = "1.1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "rustls",
] }
aws-sdk-sts = { version = "1.12", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "rustls",
] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
built = "0.7"
