[package]
name = "aws-whoami"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/bdwyertech/rs-aws-whoami"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s" # use 3 for performance-critical applications

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
aws-config = "1.1"
aws-sdk-sts = "1.12"
aws-types = "1.3"
aws-runtime = "1.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
clap = { version = "4.0", features = ["derive", "std"], default-features = false }
clap_complete = "4.0"

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

[target.'cfg(target_os = "macos")'.dependencies]
libz-sys = "1.1.23"
